--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -1,12 +1,12 @@
 * {
-    box-sizing: border-box;
-    text-wrap: wrap;
+  box-sizing: border-box;
+  text-wrap: wrap;
 }
 
 html {
-    // font-size: calc(calc(1vmax * 2) / 1vmax);
-    font-size: 16px;
-    font-family: $paragraph;
+  // font-size: calc(calc(1vmax * 2) / 1vmax);
+  font-size: 16px;
+  font-family: $paragraph;
 }
 
 // body {
@@ -15,80 +15,80 @@ html {
 
 html,
 body {
-    margin: 0;
-    white-space: nowrap;
-    max-width: 100%;
-    // Percent is used for the scrollbar in chrome
-    // width: 100%;
-    // height: 100vh;
+  margin: 0;
+  white-space: nowrap;
+  max-width: 100%;
+  // Percent is used for the scrollbar in chrome
+  // width: 100%;
+  // height: 100vh;
 
-    // overflow: overlay;
-    scrollbar-gutter: stable;
+  // overflow: overlay;
+  scrollbar-gutter: stable;
 }
 
 section {
-    padding: $space-m 0;
+  padding: $space-m 0;
 
-    position: relative;
+  position: relative;
 }
 
 input,
 textarea {
-    resize: none;
+  resize: none;
 
-    padding: $pad-s $pad-m;
-    font-family: $paragraph;
-    font-size: $p;
+  padding: $pad-s $pad-m;
+  font-family: $paragraph;
+  font-size: $p;
 
-    background-color: $secondary;
+  background-color: $secondary;
+  border: none;
+
+  transition: $time-f;
+
+  &:hover,
+  &:active,
+  &:focus {
+    background-color: $secondary-tint;
     border: none;
-
-    transition: $time-f;
-
-    &:hover,
-    &:active,
-    &:focus {
-        background-color: $secondary-tint;
-        border: none;
-        box-shadow: none;
-        outline: none;
-    }
+    box-shadow: none;
+    outline: none;
+  }
 }
 
 .checkbox {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 
-    label {
-        color: $secondary-shade;
-    }
+  label {
+    color: $secondary-shade;
+  }
 
-    input {
-        display: inline-block;
-        vertical-align: 8px;
-    }
+  input {
+    display: inline-block;
+    vertical-align: 8px;
+  }
 }
 
 form {
+  display: flex;
+  flex-direction: column;
+  gap: $gap-m;
+
+  div {
     display: flex;
     flex-direction: column;
-    gap: $gap-m;
+    gap: $gap-xs;
+  }
 
-    div {
-        display: flex;
-        flex-direction: column;
-        gap: $gap-xs;
-    }
-
-    .submit {
-        width: 100% !important;
-    }
+  .submit {
+    width: 100% !important;
+  }
 }
 
 .container {
-    width: 100%;
-    padding: 0 $space-s;
+  width: 100%;
+  padding: 0 $space-s;
 }
 
 // .fx__torn {
@@ -96,25 +96,95 @@ form {
 // }
 
 strong {
-    color: $accent;
+  color: $accent;
 }
 
 hr {
-    color: $secondary;
-    border: $border-s;
+  color: $secondary;
+  border: $border-s;
 }
 
 a {
-    color: $secondary-shade;
-    transition: $time-f;
+  color: $secondary-shade;
+  transition: $time-f;
 
-    &:hover,
-    &:active {
-        color: $secondary;
-    }
+  &:hover,
+  &:active {
+    color: $secondary;
+  }
 }
 
 button.btn {
+  color: $primary;
+  text-decoration: none;
+
+  text-transform: uppercase;
+
+  width: 50%;
+
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: $pad-s;
+
+  border-radius: 0;
+  border: none;
+
+  background-color: transparent;
+
+  span {
+    z-index: 2;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $secondary;
+    // z-index: -1;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    transform: scaleX(0);
+    height: 100%;
+    background-color: $secondary-tint;
+
+    // z-index: -1;
+
+    transition: $time-f;
+  }
+
+  &:hover,
+  &:active {
+    &::after {
+      transform: scaleX(1);
+    }
+  }
+
+  &.btn-accent {
+    color: $secondary;
+
+    &::before {
+      background-color: $accent;
+    }
+
+    &::after {
+      background-color: $accent-tint;
+    }
+  }
+}
+
+a.btn {
+  &:link,
+  &:visited {
     color: $primary;
     text-decoration: none;
 
@@ -129,139 +199,66 @@ button.btn {
     align-items: center;
     padding: $pad-s;
 
-    border-radius: 0;
-    border: none;
-
-    background-color: transparent;
-
-    span {
-        z-index: 2;
-    }
-
     &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background-color: $secondary;
-        // z-index: -1;
+      content: "";
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: $secondary;
+      z-index: -1;
     }
 
     &::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        width: 100%;
-        transform: scaleX(0);
-        height: 100%;
-        background-color: $secondary-tint;
+      content: "";
+      position: absolute;
+      top: 0;
+      width: 100%;
+      transform: scaleX(0);
+      height: 100%;
+      background-color: $secondary-tint;
 
-        // z-index: -1;
+      z-index: -1;
 
-        transition: $time-f;
-    }
-
-    &:hover,
-    &:active {
-        &::after {
-            transform: scaleX(1);
-        }
+      transition: $time-f;
     }
 
     &.btn-accent {
-        color: $secondary;
+      color: $secondary;
 
-        &::before {
-            background-color: $accent;
-        }
+      &::before {
+        background-color: $accent;
+      }
 
-        &::after {
-            background-color: $accent-tint;
-        }
+      &::after {
+        background-color: $accent-tint;
+      }
     }
-}
+  }
 
-a.btn {
-
-
-    &:link,
-    &:visited {
-        color: $primary;
-        text-decoration: none;
-
-        text-transform: uppercase;
-
-        width: 50%;
-
-        position: relative;
-
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: $pad-s;
-
-        &::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: $secondary;
-            z-index: -1;
-        }
-
-        &::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            width: 100%;
-            transform: scaleX(0);
-            height: 100%;
-            background-color: $secondary-tint;
-
-            z-index: -1;
-
-            transition: $time-f;
-        }
-
-        &.btn-accent {
-            color: $secondary;
-
-            &::before {
-                background-color: $accent;
-            }
-
-            &::after {
-                background-color: $accent-tint;
-            }
-        }
+  &:hover,
+  &:active {
+    &::after {
+      transform: scaleX(1);
     }
-
-    &:hover,
-    &:active {
-        &::after {
-            transform: scaleX(1);
-        }
-    }
-
+  }
 }
 
 .fx-shadow {
-    --fx-shadow-color: #{$secondary-shade};
-    box-shadow: 0 5px 0 0 var(--fx-shadow-color);
+  --fx-shadow-color: #{$secondary-shade};
+  box-shadow: 0 5px 0 0 var(--fx-shadow-color);
 
-    &[fx-shadow-direction="right"] {
-        box-shadow: 5px 5px 0 0 var(--fx-shadow-color);
-    }
+  &[fx-shadow-direction="right"] {
+    box-shadow: 5px 5px 0 0 var(--fx-shadow-color);
+  }
 
-    &[fx-shadow-direction="left"] {
-        box-shadow: -5px 5px 0 0 var(--fx-shadow-color);
-    }
+  &[fx-shadow-direction="left"] {
+    box-shadow: -5px 5px 0 0 var(--fx-shadow-color);
+  }
 
-    &.fx-shadow-accent {
-        --fx-shadow-color: #{$accent-shade};
-    }
+  &.fx-shadow-accent {
+    --fx-shadow-color: #{$accent-shade};
+  }
 }
 
 h1,
@@ -272,74 +269,74 @@ h5,
 h6,
 p,
 small {
-    margin: 0;
-    font-weight: 700;
+  margin: 0;
+  font-weight: 500;
 }
 
 strong {
-    font-weight: inherit;
+  font-weight: inherit;
 }
 
 h1 {
-    font-size: $h1;
-    font-family: $heading;
+  font-size: $h1;
+  font-family: $heading;
 }
 
 h2 {
-    font-size: $h2;
-    font-family: $heading;
+  font-size: $h2;
+  font-family: $heading;
 }
 
 h3 {
-    font-size: $h3;
-    font-family: $heading;
+  font-size: $h3;
+  font-family: $heading;
 }
 
 h4 {
-    font-size: $h4;
-    font-family: $subheading;
+  font-size: $h4;
+  font-family: $subheading;
 }
 
 h5 {
-    font-size: $h5;
-    font-family: $subheading;
+  font-size: $h5;
+  font-family: $subheading;
 }
 
 h6 {
-    font-size: $h6;
-    font-family: $subheading;
+  font-size: $h6;
+  font-family: $subheading;
 }
 
 p {
-    font-size: $p;
-    font-family: $paragraph;
-    font-weight: 400;
+  font-size: $p;
+  font-family: $paragraph;
+  font-weight: 400;
 }
 
 small {
-    font-size: $small;
-    font-family: $paragraph;
+  font-size: $small;
+  font-family: $paragraph;
 }
 
 .bg__dark {
-    transition: $time-ms;
-    background-color: $primary;
+  transition: $time-ms;
+  background-color: $primary;
 }
 
 .bg__light {
-    transition: $time-ms;
-    background-color: $secondary-tint;
-    color: $primary;
+  transition: $time-ms;
+  background-color: $secondary-tint;
+  color: $primary;
 }
 
 .separator {
-    &.separator__light {
-        .shape-fill {
-            fill: $secondary;
-        }
-    }
-
+  &.separator__light {
     .shape-fill {
-        fill: $primary;
+      fill: $secondary;
     }
+  }
+
+  .shape-fill {
+    fill: $primary;
+  }
 }
